--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "frontend",
+	"name": "artilun",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -14,6 +14,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.3.0",
 		"@fortawesome/free-brands-svg-icons": "^6.3.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
+		"@prisma/client": "^4.11.0",
 		"chart.js": "^4.2.1",
 		"svelte-fa": "^3.0.3"
 	},
@@ -26,12 +27,14 @@
 		"eslint": "^8.36.0",
 		"eslint-plugin-svelte": "^2.23.0",
 		"postcss": "^8.4.21",
+		"prisma": "^4.11.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"vite": "^4.2.0",
+		"vite-plugin-pwa": "^0.14.6"
 	},
 	"type": "module"
 }
