--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
 		"@fortawesome/free-brands-svg-icons": "^6.3.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@prisma/client": "^4.11.0",
+		"body-parser": "^1.20.2",
 		"chart.js": "^4.2.1",
-		"svelte-fa": "^3.0.3"
+		"jsonwebtoken": "^9.0.0",
+		"svelte-fa": "^3.0.3",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/node": "^18.15.7",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.14",
