--- a/package.json
+++ b/package.json
@@ -15,29 +15,34 @@
 		"@fortawesome/free-brands-svg-icons": "^6.3.0",
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@prisma/client": "^4.11.0",
+		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"@types/jsonwebtoken": "^9.0.1",
+		"bcrypt": "^5.1.0",
 		"body-parser": "^1.20.2",
 		"chart.js": "^4.2.1",
 		"jsonwebtoken": "^9.0.0",
 		"svelte-fa": "^3.0.3",
+		"svelte-french-toast": "1.0.4-beta.0",
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@types/node": "^18.15.7",
+		"@sveltejs/kit": "^1.14.0",
+		"@types/bcrypt": "^5.0.0",
+		"@types/node": "^18.15.10",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.36.0",
-		"eslint-plugin-svelte": "^2.23.0",
+		"eslint-plugin-svelte": "^2.23.1",
 		"postcss": "^8.4.21",
 		"prisma": "^4.11.0",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"svelte": "^3.57.0",
+		"svelte-check": "^3.1.4",
 		"tailwindcss": "^3.2.7",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.2.0",
+		"tslib": "^2.5.0",
+		"typescript": "^5.0.2",
+		"vite": "^4.2.1",
 		"vite-plugin-pwa": "^0.14.6"
 	},
 	"type": "module"
