--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "artilun",
 	"version": "0.0.1",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -16,6 +17,7 @@
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@prisma/client": "^4.12.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
+		"@tanstack/svelte-table": "^8.8.4",
 		"@types/jsonwebtoken": "^9.0.1",
 		"bcrypt": "^5.1.0",
 		"body-parser": "^1.20.2",
@@ -40,10 +42,13 @@
 		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
 		"tailwindcss": "^3.2.7",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.2",
 		"vite": "^4.2.1",
 		"vite-plugin-pwa": "^0.14.6"
 	},
-	"type": "module"
+	"prisma": {
+		"seed": "ts-node --esm --transpile-only prisma/seed.ts"
+	}
 }
