--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,20 @@ services:
     environment: 
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=password
-    volumes:
-      - ./postgres:/docker-entrypoint-initdb.d/
     ports:
       - '5432:5432'
+    volumes:
+      - ./postgres:/docker-entrypoint-initdb.d/
+  redis:
+    image: redis:latest
+    restart: always
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6379:6379'
+    volumes: 
+      - redis:/data
+volumes:
+  redis:
+    driver: local
 
