--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
 		"@fortawesome/free-solid-svg-icons": "^6.3.0",
 		"@prisma/client": "^4.12.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
-		"@tanstack/svelte-table": "^8.8.4",
-		"@types/jsonwebtoken": "^9.0.1",
 		"bcrypt": "^5.1.0",
+		"dotenv": "^16.0.3",
 		"jsonwebtoken": "^9.0.0",
 		"redis": "^4.6.5",
 		"svelte-fa": "^3.0.3",
@@ -27,9 +26,10 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.14.0",
 		"@types/bcrypt": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "^18.15.10",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
