--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "^18.15.10",
+		"@types/serviceworker": "^0.0.67",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"autoprefixer": "^10.4.14",
@@ -44,8 +45,7 @@
 		"ts-node": "^10.9.1",
 		"tslib": "^2.5.0",
 		"typescript": "^5.0.2",
-		"vite": "^4.2.1",
-		"vite-plugin-pwa": "^0.14.6"
+		"vite": "^4.2.1"
 	},
 	"prisma": {
 		"seed": "ts-node --esm --transpile-only prisma/seed.ts"
