Added lesson labels

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
 		"@prisma/client": "^4.12.0",
 		"@rgossiaux/svelte-headlessui": "^1.0.2",
 		"bcrypt": "^5.1.0",
+		"chart.js": "^4.2.1",
 		"dotenv": "^16.0.3",
 		"jsonwebtoken": "^9.0.0",
 		"redis": "^4.6.5",
+		"svelte-chartjs": "^3.1.2",
 		"svelte-fa": "^3.0.3",
 		"svelte-french-toast": "1.0.4-beta.0",
 		"zod": "^3.21.4"
@@ -29,6 +31,7 @@
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.14.0",
 		"@types/bcrypt": "^5.0.0",
+		"@types/chart.js": "^2.9.37",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "^18.15.10",
 		"@types/serviceworker": "^0.0.67",
