Fixed redis client

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 		"bcrypt": "^5.1.0",
 		"chart.js": "^4.2.1",
 		"dotenv": "^16.0.3",
+		"ioredis": "^5.3.1",
 		"jsonwebtoken": "^9.0.0",
-		"redis": "^4.6.5",
 		"svelte-chartjs": "^3.1.2",
 		"svelte-fa": "^3.0.3",
 		"svelte-french-toast": "1.0.4-beta.0",
