--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       dockerfile: Dockerfile
     env_file:
-      - .env.production
+      - .env
     ports:
       - '3000:3000'
     depends_on:
