--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - postgres:/postgres
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:latest
@@ -31,12 +31,9 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
-    volumes: 
-      - redis:/redis
+    volumes:
+      - redis_data:/data
 
 volumes:
-  redis:
-    driver: local
-  postgres:
-    driver: local
-
+  postgres_data:
+  redis_data:
