--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
 		"svelte": "^3.58.0",
 		"svelte-check": "^3.2.0",
 		"tailwindcss": "^3.3.2",
-		"ts-node": "^10.9.1",
 		"tslib": "^2.5.0",
+		"tsx": "^3.12.7",
 		"typescript": "^5.0.4",
 		"vite": "^4.3.3"
 	},
 	"prisma": {
-		"seed": "ts-node --esm --transpile-only prisma/seed.ts"
+		"seed": "tsx prisma/seed.ts"
 	}
 }
